# breath_data

./: .gitlab-ci.yml  README.md  partial.md
final/: README.md
final/data/: README.md
final/src/: README.md  cidades_geo.csv  dados_climaticos.py  dataSUS.py  relational_querier.py
lab08/: README.md
module/: README.md  setup.cfg
module/src/breath_data/: __init__.py
module/src/breath_data/bd_acess_point/: service.py
module/src/breath_data/bd_acess_point/graph_querier/: graph_querier.py  querier.py
module/src/breath_data/bd_acess_point/relational_querier/: relational_querier.py
module/src/breath_data/data_workflow/: .~lock.IBGE_Municipios.csv#  climate.py  dados_climaticos.py  data_download.py  ibge.py  main.py  open_sus.py  service.py  workflow.py
module/test/: graph_querier.py
previa/: README.md
previa/data/: README.md
previa/src/: README.md  clima.py  dados_climaticos.py  dataSUS.py  relational_querier.py
