[metadata]
name = breath_data
version = 0.0.1
description = BReATH data services
author = EltonCN, João Bonucci, Lucas Araújo, Thiago Lacerda
author_email = elton.nascimento@students.ic.unicamp.br, j218733@dac.unicamp.br, l240106@dac.unicamp.br, t244712@dac.unicamp.br
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BReATH-Brazilian-Research/breath_data
project_urls =
    Bug Tracker = https://github.com/BReATH-Brazilian-Research/breath_data/issues
    Documentation = https://github.com/BReATH-Brazilian-Research/breath_data/wiki
classifiers =
    Programming Language :: Python :: 3
    Topic :: Database

license_files = TODO
license = TODO

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    breath_api_interface
    neo4j
    numpy
    pandas


[options.packages.find]
where = src